Fix footer list alignment

--- a/css/global.css
+++ b/css/global.css
@@ -214,6 +214,7 @@ footer {
 
 .footer-col ul {
     list-style: none;
+    padding: 0;
 }
 
 .footer-col ul a {
